# aalpy-compro-examples

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  compile_flags.txt  pyproject.toml
aalpy-compro/: README.md  pyproject.toml
aalpy-compro/src/aalpy_compro/: __init__.py  errors.py  main.py  main_args.py  regex.py
aalpy-compro/src/aalpy_compro/__internal/: cpp_common_dfa_struct.py  custom_eq_oracles.py  dfa_to_cpp.py  eq_oracles.py  fullmatch.py  get_version.py  learn_dfa.py  learning_property.py  load_property.py  main_args.py  missing_symbol_payload.py  names.py  normalize_alphabet.py  prefix_accepting_sul.py  re_pattern.py  regex_kind.py  regex_property.py  regex_to_dfa.py  shtab_helper.py  sul.py  validate_aalpy_alphabet.py  validation_for_aalpy.py
examples/: README.md
examples/OUPC2024_C/: README.md  learned_dfa.cpp  property.py  refined_solution.cpp  run.py
examples/abc418_g/: README.md  learned_dfa.cpp  property.py.tmpl  refined_solution.cpp  run.py
examples/abc424_d/: README.md  learned_dfa.cpp  property.py.tmpl  refined_solution.cpp  run.py
examples/tdpc_grid/: README.md  learned_dfa.cpp  property.py.tmpl  refined_solution.cpp  run.py
examples/tenka1_2019_c/: README.md  learned_dfa.cpp  property.py  refined_solution.cpp
