[project]
name = "aalpy-compro-examples"
version = "0.3.0"
description = "Examples of solving competitive programming problems with automata learning using AALpy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aalpy-compro",
]

[tool.uv.workspace]
members = [
    "aalpy-compro",
]

[tool.uv.sources]
aalpy-compro = { workspace = true }

[[tool.mypy.overrides]]
module = [
    "aalpy.*",
    "pydot.*",
]
ignore_missing_imports = true
