[project]
name = "aalpy-compro-examples"
version = "0.3.0"
description = "Examples of solving competitive programming problems with automata learning using AALpy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aalpy-compro",
]

[tool.uv.workspace]
members = [
    "aalpy-compro",
]

[tool.uv.sources]
aalpy-compro = { workspace = true }

[[tool.mypy.overrides]]
module = [
    "aalpy.*",
    "pydot.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
