[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aalpy-compro"
dynamic = ["version"]
description = "Libraries to solve competitive programming problems with automata learning using AALpy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aalpy>=1.5.3",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

tag-pattern = "^aalpy-compro-v(?P<version>.*)$"

[tool.hatch.version.raw-options]
root = "../.."

git_describe_command = "git describe --dirty --tags --long --abbrev=40 --match aalpy-compro-v*"
