[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aalpy-compro"
dynamic = ["version"]
description = "Libraries to solve competitive programming problems with automata learning using AALpy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aalpy>=1.5.3",
    "shtab>=1.8.0",
]

[project.scripts]
aalpy-compro = "aalpy_compro.main:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^aalpy-compro-v(?P<version>.*)$"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
git_describe_command = [
  "git", "describe",
  "--dirty", "--tags", "--long", "--abbrev=40",
  "--match", "aalpy-compro-v*",
]
search_parent_directories = true
version_scheme = "no-guess-dev"
